--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 
     <title>Dashboard - Analytics | Materio - Bootstrap Material Design Admin Template</title>
 
+    <base href="/admin/">
+
     <meta name="description" content="" />
 
     <!-- Favicon -->
