--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://frontend-sktpj.vercel.app/assets/img/favicon/favicon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,20 +21,20 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&ampdisplay=swap"
       rel="stylesheet" />
 
-    <link rel="stylesheet" href="/assets/vendor/fonts/remixicon/remixicon.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/fonts/remixicon/remixicon.css" />
 
     <!-- Menu waves for no-customizer fix -->
-    <link rel="stylesheet" href="/assets/vendor/libs/node-waves/node-waves.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/libs/node-waves/node-waves.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="/assets/vendor/css/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="/assets/css/demo.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/css/demo.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/vendor/libs/apex-charts/apex-charts.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/css/style.css" />
+    <link rel="stylesheet" href="https://frontend-sktpj.vercel.app/assets/vendor/libs/apex-charts/apex-charts.css" />
     <style>
       .menu-item.active {
         background: radial-gradient(270deg, #8f5bff 0%, #c5aaff 100%);
@@ -191,20 +191,20 @@
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="/assets/vendor/js/helpers.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/assets/js/config.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/js/config.js"></script>
     </head>
 <body>
   <app-root></app-root>
 
-    <script src="/assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="/assets/vendor/libs/popper/popper.js"></script>
-    <script src="/assets/vendor/js/bootstrap.js"></script>
-    <script src="/assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="/assets/vendor/js/menu.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/libs/popper/popper.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/js/bootstrap.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/libs/node-waves/node-waves.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/js/menu.js"></script>
 
     <!-- endbuild -->
 
@@ -264,13 +264,13 @@
 
 
     <!-- Vendors JS -->
-    <script src="/assets/vendor/libs/apex-charts/apexcharts.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/vendor/libs/apex-charts/apexcharts.js"></script>
 
     <!-- Main JS -->
 
 
     <!-- Page JS -->
-    <script src="/assets/js/dashboards-analytics.js"></script>
+    <script src="https://frontend-sktpj.vercel.app/assets/js/dashboards-analytics.js"></script>
 
     <!-- Place this tag before closing body tag for github widget button. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
